# TlasAuctionSniper

./: .gitignore  README.md  fileAccessor.py  main.py  petprices.txt  preclean.py  prices.txt  pricessuper.txt  pyproject.toml  results.json  run.sh  up.js
fliplogs/: logs_f2.txt
