[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["tlanotyt <<>>"]
description = ""
name = "repl_python3_AuctionSniper"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.7.3"
python = "^3.8"
[tool.poetry.dev-dependencies]
